Week4/Week4_HW_이정민/fail/clone/app/src/main/java/com/example/ljmpr/clone/News.java
package com.example.ljmpr.clone;

import android.support.v4.app.Fragment;

public class News extends Fragment {

    public News() {

    }
}
